Fix wrapping of long VM descriptions

--- a/src/components/VmsList/style.css
+++ b/src/components/VmsList/style.css
@@ -23,6 +23,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     width: inherit;
+    white-space: nowrap;
 }
 
 .scrollingWrapper {
